--- a/index.html
+++ b/index.html
@@ -7,7 +7,56 @@
 
 
  <body>
-    <h1>Arthur Carson</h>
+    <h1>Arthur Carson</h1>
+   <h2>3535 Bryant Ave South, Minneapolis, MN, 55408 · (414) 400-3449 · carson.bob.arthur@gmail.com</h2>
+  <h3>Work Experience</h3>
+  
+  <!-- Moto I -->
+  <p>Moto-I, Minneapolis, MN</p>
+  <p>April 2019 - Present</p>
+  <p>Server</p>
+  <ul>
+   <li>Manage overall customer experience</li>
+   <li>Deliver high level of customer service to ensure excellent experience</li>
+  </ul>
+  
+  <!-- Lake & Irving -->
+  <p>Lake & Irving, Minneapolis, MN</p>
+  <p>August 2018 - Present</p>
+  <p>Server</p>
+  <ul>
+   <li>Manage overall customer experience</li>
+   <li>Deliver high level of customer service to ensure excellent experience</li>
+  </ul>
+  
+  <!-- Vagabond -->
+  <p>Vagabond</p>
+  <p>August 2015 - August 2018</p>
+  <p>Server & Expo</p>
+  <ul>
+   <li>Consistently earned highest sales and won multiple sales competitions</li>
+   <li>Collaborate with management, front of house staff, and back of house staff to employ effective communication throughout restaurant</li>
+   <li>Expedited orders from kitchen to table while maintaining a clean and organized kitchen work space</li>
+   <li>Point-of-sale system: Micros</li>
+  </ul>
+  
+  <!-- Swig -->
+  <p>Swig</p>
+  <p>August 2012 - August 2015</p>
+  <p>Server, Barback, Host, Expo</p>
+  <ul>
+   <li>Expedited orders from kitchen to table while maintaining a clean and organized kitchen work space</li>
+   <li>Recognized for efficiency in the workplace by being offered an opportunity to expand duties with a front of house position</li>
+   <li>Provided welcoming first impression for customers</li>
+   <li>Managed reservations to guarantee enjoyable dining experience</li>
+   <li>Assisted bartenders with active inventory during peak service hours</li>
+   <li>Aided in the completion of drink orders</li>
+   <li>Recognized for providing excellent customer service as a front of house employee by being offered a server position</li>
+   <li>Managed overall customer experience</li>
+   <li>Delivered high level of customer service to ensure memorable experience</li>
+   <li>Point-of-sale system: 2Touch</li>
+   <li>Reservation system: OpenTable</li>
+  
    
  </body>
 </html>
