--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <h3>Work Experience</h3>
   
   <!-- Moto I -->
-  <p>Moto-I, Minneapolis, MN</p>
-  <p>April 2019 - Present</p>
+  <p id="moto" class="job">Moto-I, Minneapolis, MN</p>
+  <p class="dates">April 2019 - Present</p>
   <p>Server</p>
   <ul>
    <li>Manage overall customer experience</li>
@@ -21,8 +21,8 @@
   </ul>
   
   <!-- Lake & Irving -->
-  <p>Lake & Irving, Minneapolis, MN</p>
-  <p>August 2018 - Present</p>
+  <p id="lakeIrving" class ="job">Lake & Irving, Minneapolis, MN</p>
+  <p class="dates">August 2018 - Present</p>
   <p>Server</p>
   <ul>
    <li>Manage overall customer experience</li>
@@ -30,8 +30,8 @@
   </ul>
   
   <!-- Vagabond -->
-  <p>Vagabond</p>
-  <p>August 2015 - August 2018</p>
+  <p id="vagabond" class="job>Vagabond</p>
+  <p class="dates">August 2015 - August 2018</p>
   <p>Server & Expo</p>
   <ul>
    <li>Consistently earned highest sales and won multiple sales competitions</li>
@@ -41,8 +41,8 @@
   </ul>
   
   <!-- Swig -->
-  <p>Swig</p>
-  <p>August 2012 - August 2015</p>
+  <p id="swig" class="job">Swig</p>
+  <p class="dates">August 2012 - August 2015</p>
   <p>Server, Barback, Host, Expo</p>
   <ul>
    <li>Expedited orders from kitchen to table while maintaining a clean and organized kitchen work space</li>
