--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </ul>
   
   <!-- Vagabond -->
-  <p id="vagabond" class="job>Vagabond</p>
+  <p id="vagabond" class="job>Vagabond, Milwaukee, WI</p>
   <p class="dates">August 2015 - August 2018</p>
   <p>Server & Expo</p>
   <ul>
@@ -41,7 +41,7 @@
   </ul>
   
   <!-- Swig -->
-  <p id="swig" class="job">Swig</p>
+  <p id="swig" class="job">Swig, Milwaukee, WI</p>
   <p class="dates">August 2012 - August 2015</p>
   <p>Server, Barback, Host, Expo</p>
   <ul>
