--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
  <body>
     <h1>Arthur Carson</h1>
+  <!-- Picture of me -->
+     <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGihVcCQnECDw/profile-displayphoto-shrink_200_200/0?e=1597276800&v=beta&t=b7z6SvkuTKTIDcdFMJTCDtMWn471P4JNAx6gsB3dH7k" alt="me">
+  
    <h2>3535 Bryant Ave South, Minneapolis, MN, 55408 · (414) 400-3449 · carson.bob.arthur@gmail.com</h2>
   <h3>Work Experience</h3>
   
