--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <h3>Work Experience</h3>
   
   <!-- Moto I -->
-  <p id="moto" class="job">Moto-I, Minneapolis, MN</p>
-  <p class="dates">April 2019 - Present</p>
+  <p>Moto-I, Minneapolis, MN</p>
+  <p>April 2019 - Present</p>
   <p>Server</p>
   <ul>
    <li>Manage overall customer experience</li>
@@ -24,8 +24,8 @@
   </ul>
   
   <!-- Lake & Irving -->
-  <p id="lakeIrving" class ="job">Lake & Irving, Minneapolis, MN</p>
-  <p class="dates">August 2018 - Present</p>
+  <p>Lake & Irving, Minneapolis, MN</p>
+  <p>August 2018 - Present</p>
   <p>Server</p>
   <ul>
    <li>Manage overall customer experience</li>
@@ -33,8 +33,8 @@
   </ul>
   
   <!-- Vagabond -->
-  <p id="vagabond" class="job>Vagabond, Milwaukee, WI</p>
-  <p class="dates">August 2015 - August 2018</p>
+  <p>Vagabond, Milwaukee, WI</p>
+  <p>August 2015 - August 2018</p>
   <p>Server & Expo</p>
   <ul>
    <li>Consistently earned highest sales and won multiple sales competitions</li>
@@ -43,9 +43,9 @@
    <li>Point-of-sale system: Micros</li>
   </ul>
   
-  <!-- Swig -->
-  <p id="swig" class="job">Swig, Milwaukee, WI</p>
-  <p class="dates">August 2012 - August 2015</p>
+  
+  <p>Swig, Milwaukee, WI</p>
+  <p>August 2012 - August 2015</p>
   <p>Server, Barback, Host, Expo</p>
   <ul>
    <li>Expedited orders from kitchen to table while maintaining a clean and organized kitchen work space</li>
@@ -59,6 +59,7 @@
    <li>Delivered high level of customer service to ensure memorable experience</li>
    <li>Point-of-sale system: 2Touch</li>
    <li>Reservation system: OpenTable</li>
+   </ul>
   
    
  </body>
